--- a/_3.WebApp/pom.xml
+++ b/_3.WebApp/pom.xml
@@ -65,13 +65,12 @@
             <version>0.4.20</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.sejda.webp-imageio/webp-imageio-sejda -->
+        <!-- https://mvnrepository.com/artifact/org.sejda.imageio/webp-imageio -->
         <dependency>
-            <groupId>org.sejda.webp-imageio</groupId>
-            <artifactId>webp-imageio-sejda</artifactId>
-            <version>0.1.0</version>
+            <groupId>org.sejda.imageio</groupId>
+            <artifactId>webp-imageio</artifactId>
+            <version>0.1.6</version>
         </dependency>
-
 
     </dependencies>
 
