--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@tinymce/tinymce-react": "^4.3.0",
     "@types/bootstrap": "^5.2.6",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
@@ -18,6 +19,7 @@
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.5.0",
     "formik": "^2.4.3",
+    "html-react-parser": "^4.2.2",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
