--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@tinymce/tinymce-react": "^4.3.0",
     "@types/bootstrap": "^5.2.6",
@@ -17,10 +18,10 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
-    "headlessui": "^0.0.0",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.5.0",
     "formik": "^2.4.3",
+    "headlessui": "^0.0.0",
     "html-react-parser": "^4.2.2",
     "jsvectormap": "^1.5.3",
     "jwt-decode": "^3.1.2",
